--- a/web06-sumarbotones.html
+++ b/web06-sumarbotones.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sumar botones</title>
 </head>
 <body>
     <h1>Sumar botones dinámicos</h1>
