--- a/practica02-hoteles/index.html
+++ b/practica02-hoteles/index.html
@@ -112,6 +112,7 @@
             data: dataJson,
             success: function (data) {
                 cargarHoteles();
+                limpiarCampos();
             },
             error: function (error) {
                 $("#error").text("Error");
