--- a/web15-cruddepartamentos.html
+++ b/web15-cruddepartamentos.html
@@ -12,17 +12,17 @@
     <h1>EJEMPLO CRUD Jquery JSON</h1>
     <label for="numero">Número: </label>
     <input type="text" id="cajanumero"><br />
-    <label for="nombre">Nombre</label>
+    <label for="nombre" class="mt-3">Nombre</label>
     <input type="text" id="cajanombre"><br />
-    <label for="localidad">Localidad</label>
+    <label for="localidad" class="mt-3">Localidad</label>
     <input type="text" id="cajalocalidad">
     <hr />
-    <button type="button" id="insertar">Insertar</button>
-    <button type="button" id="update">Modificar</button>
-    <button type="button" id="delete">Eliminar</button>
-    <button type="button" id="buscarpornumero">Buscar por numero</button>
+    <button type="button" id="insertar" class="btn btn-success">Insertar</button>
+    <button type="button" id="update" class="btn btn-warning">Modificar</button>
+    <button type="button" id="delete" class="btn btn-danger">Eliminar</button>
+    <button type="button" id="buscarpornumero" class="btn btn-primary">Buscar por numero</button>
     <hr />
-    <table border="1" id="tabladepartamentos">
+    <table id="tabladepartamentos" class="table">
         <thead>
             <tr>
                 <th>Número</th>
